[package]
name = "lme2-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
axum = "0.6.20"
lazy_static = "1.4.0"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
rayon = "1.8.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.5.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
nanoid = "0.4.0"
serde_yaml = "0.9.27"
clap = { version = "4.4.8", features = ["derive"] }
async-recursion = "1.0.5"
futures = "0.3.29"
lme-core = { path = "./core" }

[workspace]
members = ["core", "n_to_n", "pair"]
