[package]
name = "lme-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n_to_n = { path = "../n_to_n" }
pair = { path = "../pair" }
serde = { version = "1.0.190", features = ["derive"]}
nalgebra = {version = "0.32.3", features = ["serde-serialize"]}
rayon = "1.8.0"